--- a/camperLeaderboard/public/sass/style.scss
+++ b/camperLeaderboard/public/sass/style.scss
@@ -1,7 +1,7 @@
 @import "compass/reset";
 @import "compass/css3";
 
-body {
+.app {
   background-color: #bdc3c7;
 }
 
@@ -16,10 +16,27 @@ body {
 }
 
 .content {
-  background-color: #1abc9c;
+  background-color: #bdc3c7;
+  padding: 3em;
+  border-radius: 20px;
+}
+
+.table {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 }
 
 .row-user {
-  display: flex;
-  flex-direction: row;
+  @include flexbox((
+    display: flex,
+    flex-direction: row,
+    justify-content: space-between
+  ));
+  margin: 0 0 3em 0;
+  img {
+    width: 50px;
+    height: auto;
+    border-radius: 5px;
+  }
 }
