--- a/camperLeaderboard/public/stylesheets/style.css
+++ b/camperLeaderboard/public/stylesheets/style.css
@@ -64,7 +64,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
 }
 
 /* line 4, ../sass/style.scss */
-body {
+.app {
   background-color: #bdc3c7;
 }
 
@@ -80,11 +80,31 @@ body {
 
 /* line 18, ../sass/style.scss */
 .content {
-  background-color: #1abc9c;
+  background-color: #bdc3c7;
+  padding: 3em;
+  border-radius: 20px;
 }
 
-/* line 22, ../sass/style.scss */
+/* line 24, ../sass/style.scss */
+.table {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+/* line 30, ../sass/style.scss */
 .row-user {
+  display: -webkit-flex;
+  -webkit-flex-direction: row;
+  -webkit-justify-content: space-between;
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
+  margin: 0 0 3em 0;
+}
+/* line 37, ../sass/style.scss */
+.row-user img {
+  width: 50px;
+  height: auto;
+  border-radius: 5px;
 }
